tesser.core: better JVM opts, eliminate reflection